Set Java version to 21 for tests too