@@ -7,7 +7,6 @@ import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -85,7 +84,7 @@ public class RosettaTestModelService {
 		URL resourceURL = getClass().getResource(resourceFolderOrFile);
 	    Path resourcePath;
 		try {
-			resourcePath = Paths.get(resourceURL.toURI());
+			resourcePath = Path.of(resourceURL.toURI());
 		} catch (URISyntaxException e) {
 			throw new RuntimeException(e);
 		}
